@@ -66,7 +66,11 @@
      <unzip src="jsr223/sleep-engine.jar" dest="bin" />
      <jar destfile="sleep.jar"
           basedir="bin"
-          includes="**/*" filesetmanifest="mergewithoutmain">
+          includes="**/*">
+
+         <manifest>
+           <attribute name="Main-Class" value="sleep.console.TextConsole" />
+         </manifest>
 
         <!-- wow talk about jumping through hoops, whatever happened to Make? -->
         <metainf dir="jsr223/src">
